syntax = "proto3";

package http.post;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "wuzigoweb/api/http/post;post";

service Post {
  // 创建帖子
  rpc CreatePost (CreatePostRequest) returns (CreatePostReply) {
    option (google.api.http) = {
      post: "/v1/post/createpost",
      body: '*',
    };
  }
}

message CreatePostRequest {
  string title = 1 [(validate.rules).string.min_len = 1];
  string text = 2 [(validate.rules).string.min_len = 1];
  string tags = 3 [(validate.rules).string.min_len = 1];
  int64 userId = 4;
}

message CreatePostReply {
  int64 id = 1;
}

